# work-dashboard

./: .gitignore  README.md  pyproject.toml  run.sh
app/: api.py  config.py  lock.py  main.py  models.py  rules_store.py  services.py
collector/: claude_runner.py  default_rules.json  ids.py  prompt.py  raw_schema.json  run.py  sources.py
collector/fixtures/: raw_data.degraded.json  raw_data.sample.json
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
frontend/js/widgets/: breakdown.js  donow.js  gauge.js  rules_panel.js  timeline.js
scoring/: engine.py  explain.py  factors.py
scripts/: com.user.worktable.collector.plist  install-schedule.sh
tests/: conftest.py  test_api.py  test_collector_parse.py  test_ids.py  test_rules_store.py  test_scoring.py
